--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 # Image:
 logo: /assets/images/Awesome BadUI.png
 
-url: "https://goulartnogueira.github.io/BadUI/" # the subpath of your site, e.g. /blog
-
+url: "https://goulartnogueira.github.io/" # the subpath of your site, e.g. /blog
+baseurl: "/BadUI"
 
 # Build settings
 theme: jekyll-theme-minimal
